testsuite/tests/tool-toplevel/exotic_lists.compilers.reference
module L : sig type ('a, 'b) t = [] | (::) of 'a * ('b, 'a) t end
Line 4, characters 0-4:
4 | open L;;
    ^^^^
Error: Syntax error
Line 4, characters 0-6:
4 | module L = struct
    ^^^^^^
Error: Syntax error
Line 4, characters 0-4:
4 | open L;;
    ^^^^
Error: Syntax error


Line 3, characters 0-0:
Error: Syntax error

